librespeed/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-server
spec:
  selector:
    matchLabels:
      app: demo-server
  replicas: 2
  template:
    metadata:
      labels:
        app: demo-server
    spec:
      containers:
        - name: demo-server
          image: nginx
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 256Mi
              cpu: "500m"
            limits:
              memory: 256Mi
              cpu: "500m"
