librespeed/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  labels:
    app: demo-server
spec:
  selector:
    app.kubernetes.io/name: demo-server
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 80
